--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="https://download.affectiva.com/js/3.2.1/affdex.js"></script>
+    <script crossorigin src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,7 +30,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script src="https://download.affectiva.com/js/3.2.1/affdex.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
